Update formatting of all config.json files

--- a/Emu/ARCADE/config.json
+++ b/Emu/ARCADE/config.json
@@ -4,14 +4,19 @@
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/arcade.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/arcade.png",
   "background": "",
-  "themecolor":"CD6155",
-  "effectsh":"effect.sh",
+  "themecolor": "CD6155",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/ARCADE",
-    "imgpath": "../../Roms/ARCADE/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/ARCADE",
-    "imgpath": "../../../../media/sdcard1/Roms/ARCADE/Imgs"}],
+    {
+      "rompath": "../../Roms/ARCADE",
+      "imgpath": "../../Roms/ARCADE/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/ARCADE",
+      "imgpath": "../../../../media/sdcard1/Roms/ARCADE/Imgs"
+    }
+  ],
   "rompath": "../../Roms/ARCADE",
   "imgpath": "../../Roms/ARCADE/Imgs",
   "gamelist": "../../Roms/ARCADE/miyoogamelist.xml",
