--- a/Emu/NGP/config.json
+++ b/Emu/NGP/config.json
@@ -1,17 +1,22 @@
 {
   "label": "NGP",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/ngp.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/ngp.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/ngp.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/ngp.png",
   "background": "",
-  "themecolor":"FFFFFF",
-  "effectsh":"effect.sh",
+  "themecolor": "FFFFFF",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/NGP",
-    "imgpath": "../../Roms/NGP/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/NGP",
-    "imgpath": "../../../../media/sdcard1/Roms/NGP/Imgs"}],
+    {
+      "rompath": "../../Roms/NGP",
+      "imgpath": "../../Roms/NGP/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/NGP",
+      "imgpath": "../../../../media/sdcard1/Roms/NGP/Imgs"
+    }
+  ],
   "rompath": "../../Roms/NGP",
   "imgpath": "../../Roms/NGP/Imgs",
   "gamelist": "../../Roms/NGP/miyoogamelist.xml",
