--- a/Emu/VB/config.json
+++ b/Emu/VB/config.json
@@ -1,6 +1,6 @@
 {
   "label": "VirtualBoy",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/vb.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/vb.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/vb.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/vb.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/VB",
-    "imgpath": "../../Roms/VB/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/VB",
-    "imgpath": "../../../../media/sdcard1/Roms/VB/Imgs"}],
+    {
+      "rompath": "../../Roms/VB",
+      "imgpath": "../../Roms/VB/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/VB",
+      "imgpath": "../../../../media/sdcard1/Roms/VB/Imgs"
+    }
+  ],
   "rompath": "../../Roms/VB",
   "imgpath": "../../Roms/VB/Imgs",
   "gamelist": "../../Roms/VB/miyoogamelist.xml",
