--- a/Emu/ARDUBOY/config.json
+++ b/Emu/ARDUBOY/config.json
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/ARDUBOY",
-    "imgpath": "../../Roms/ARDUBOY/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/ARDUBOY",
-    "imgpath": "../../../../media/sdcard1/Roms/ARDUBOY/Imgs"}],
+    {
+      "rompath": "../../Roms/ARDUBOY",
+      "imgpath": "../../Roms/ARDUBOY/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/ARDUBOY",
+      "imgpath": "../../../../media/sdcard1/Roms/ARDUBOY/Imgs"
+    }
+  ],
   "rompath": "../../Roms/ARDUBOY",
   "imgpath": "../../Roms/ARDUBOY/Imgs",
   "gamelist": "../../Roms/ARDUBOY/miyoogamelist.xml",
