--- a/Emu/ATARIST/config.json
+++ b/Emu/ATARIST/config.json
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/ATARIST",
-    "imgpath": "../../Roms/ATARIST/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/ATARIST",
-    "imgpath": "../../../../media/sdcard1/Roms/ATARIST/Imgs"}],
+    {
+      "rompath": "../../Roms/ATARIST",
+      "imgpath": "../../Roms/ATARIST/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/ATARIST",
+      "imgpath": "../../../../media/sdcard1/Roms/ATARIST/Imgs"
+    }
+  ],
   "rompath": "../../Roms/ATARIST",
   "imgpath": "../../Roms/ATARIST/Imgs",
   "gamelist": "../../Roms/ATARIST/miyoogamelist.xml",
