--- a/Emu/CHAI/config.json
+++ b/Emu/CHAI/config.json
@@ -1,6 +1,6 @@
 {
   "label": "ChaiLove",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/chai.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/chai.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/chai.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/chai.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/CHAI",
-    "imgpath": "../../Roms/CHAI/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/CHAI",
-    "imgpath": "../../../../media/sdcard1/Roms/CHAI/Imgs"}],
+    {
+      "rompath": "../../Roms/CHAI",
+      "imgpath": "../../Roms/CHAI/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/CHAI",
+      "imgpath": "../../../../media/sdcard1/Roms/CHAI/Imgs"
+    }
+  ],
   "rompath": "../../Roms/CHAI",
   "imgpath": "../../Roms/CHAI/Imgs",
   "gamelist": "../../Roms/CHAI/miyoogamelist.xml",
