--- a/Emu/CPS1/config.json
+++ b/Emu/CPS1/config.json
@@ -1,17 +1,22 @@
 {
   "label": "CPS1",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/cps1.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/cps1.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/cps1.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/cps1.png",
   "background": "",
-  "themecolor":"0000FF",
-  "effectsh":"effect.sh",
+  "themecolor": "0000FF",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/CPS1",
-    "imgpath": "../../Roms/CPS1/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/CPS1",
-    "imgpath": "../../../../media/sdcard1/Roms/CPS1/Imgs"}],
+    {
+      "rompath": "../../Roms/CPS1",
+      "imgpath": "../../Roms/CPS1/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/CPS1",
+      "imgpath": "../../../../media/sdcard1/Roms/CPS1/Imgs"
+    }
+  ],
   "rompath": "../../Roms/CPS1",
   "imgpath": "../../Roms/CPS1/Imgs",
   "gamelist": "../../Roms/CPS1/miyoogamelist.xml",
