--- a/Emu/CPS2/config.json
+++ b/Emu/CPS2/config.json
@@ -4,14 +4,19 @@
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/cps2.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/cps2.png",
   "background": "",
-  "themecolor":"FFFF00",
-  "effectsh":"effect.sh",
+  "themecolor": "FFFF00",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/CPS2",
-    "imgpath": "../../Roms/CPS2/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/CPS2",
-    "imgpath": "../../../../media/sdcard1/Roms/CPS2/Imgs"}],
+    {
+      "rompath": "../../Roms/CPS2",
+      "imgpath": "../../Roms/CPS2/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/CPS2",
+      "imgpath": "../../../../media/sdcard1/Roms/CPS2/Imgs"
+    }
+  ],
   "rompath": "../../Roms/CPS2",
   "imgpath": "../../Roms/CPS2/Imgs",
   "gamelist": "../../Roms/CPS2/miyoogamelist.xml",
