--- a/Emu/CPS3/config.json
+++ b/Emu/CPS3/config.json
@@ -4,14 +4,19 @@
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/cps3.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/cps3.png",
   "background": "",
-  "themecolor":"FF4400",
-  "effectsh":"effect.sh",
+  "themecolor": "FF4400",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/CPS3",
-    "imgpath": "../../Roms/CPS3/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/CPS3",
-    "imgpath": "../../../../media/sdcard1/Roms/CPS3/Imgs"}],
+    {
+      "rompath": "../../Roms/CPS3",
+      "imgpath": "../../Roms/CPS3/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/CPS3",
+      "imgpath": "../../../../media/sdcard1/Roms/CPS3/Imgs"
+    }
+  ],
   "rompath": "../../Roms/CPS3",
   "imgpath": "../../Roms/CPS3/Imgs",
   "gamelist": "../../Roms/CPS3/miyoogamelist.xml",
