--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -1,17 +1,22 @@
 {
   "label": "DC",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/dc.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/dc.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/dc.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/dc.png",
-  "effectsh":"effect.sh",
+  "effectsh": "effect.sh",
   "background": "",
-  "themecolor":"FFFFFF",
+  "themecolor": "FFFFFF",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/DC",
-    "imgpath": "../../Roms/DC/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/DC",
-    "imgpath": "../../../../media/sdcard1/Roms/DC/Imgs"}],
+    {
+      "rompath": "../../Roms/DC",
+      "imgpath": "../../Roms/DC/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/DC",
+      "imgpath": "../../../../media/sdcard1/Roms/DC/Imgs"
+    }
+  ],
   "rompath": "../../Roms/DC",
   "imgpath": "../../Roms/DC/Imgs",
   "gamelist": "../../Roms/DC/miyoogamelist.xml",
