--- a/Emu/DOS/config.json
+++ b/Emu/DOS/config.json
@@ -1,6 +1,6 @@
 {
   "label": "MS-DOS",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/dos.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/dos.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/dos.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/dos.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/DOS",
-    "imgpath": "../../Roms/DOS/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/DOS",
-    "imgpath": "../../../../media/sdcard1/Roms/DOS/Imgs"}],
+    {
+      "rompath": "../../Roms/DOS",
+      "imgpath": "../../Roms/DOS/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/DOS",
+      "imgpath": "../../../../media/sdcard1/Roms/DOS/Imgs"
+    }
+  ],
   "rompath": "../../Roms/DOS",
   "imgpath": "../../Roms/DOS/Imgs",
   "gamelist": "../../Roms/DOS/miyoogamelist.xml",
