--- a/Emu/EIGHTHUNDRED/config.json
+++ b/Emu/EIGHTHUNDRED/config.json
@@ -1,6 +1,6 @@
 {
   "label": "Atari 800",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/atari800.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/atari800.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/atari800.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/atari800.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/EIGHTHUNDRED",
-    "imgpath": "../../Roms/EIGHTHUNDRED/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/EIGHTHUNDRED",
-    "imgpath": "../../../../media/sdcard1/Roms/EIGHTHUNDRED/Imgs"}],
+    {
+      "rompath": "../../Roms/EIGHTHUNDRED",
+      "imgpath": "../../Roms/EIGHTHUNDRED/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/EIGHTHUNDRED",
+      "imgpath": "../../../../media/sdcard1/Roms/EIGHTHUNDRED/Imgs"
+    }
+  ],
   "rompath": "../../Roms/EIGHTHUNDRED",
   "imgpath": "../../Roms/EIGHTHUNDRED/Imgs",
   "gamelist": "../../Roms/EIGHTHUNDRED/miyoogamelist.xml",
