--- a/Emu/FAIRCHILD/config.json
+++ b/Emu/FAIRCHILD/config.json
@@ -1,6 +1,6 @@
 {
   "label": "ChannelF",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/fairchild.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/fairchild.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/fairchild.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/fairchild.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/FAIRCHILD",
-    "imgpath": "../../Roms/FAIRCHILD/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/FAIRCHILD",
-    "imgpath": "../../../../media/sdcard1/Roms/FAIRCHILD/Imgs"}],
+    {
+      "rompath": "../../Roms/FAIRCHILD",
+      "imgpath": "../../Roms/FAIRCHILD/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/FAIRCHILD",
+      "imgpath": "../../../../media/sdcard1/Roms/FAIRCHILD/Imgs"
+    }
+  ],
   "rompath": "../../Roms/FAIRCHILD",
   "imgpath": "../../Roms/FAIRCHILD/Imgs",
   "gamelist": "../../Roms/FAIRCHILD/miyoogamelist.xml",
