--- a/Emu/FBNEO/config.json
+++ b/Emu/FBNEO/config.json
@@ -1,17 +1,22 @@
 {
   "label": "FBNEO",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/arcade.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/arcade.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/arcade.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/arcade.png",
   "background": "",
-  "themecolor":"EC7063",
-  "effectsh":"effect.sh",
+  "themecolor": "EC7063",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/FBNEO",
-    "imgpath": "../../Roms/FBNEO/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/FBNEO",
-    "imgpath": "../../../../media/sdcard1/Roms/FBNEO/Imgs"}],
+    {
+      "rompath": "../../Roms/FBNEO",
+      "imgpath": "../../Roms/FBNEO/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/FBNEO",
+      "imgpath": "../../../../media/sdcard1/Roms/FBNEO/Imgs"
+    }
+  ],
   "rompath": "../../Roms/FBNEO",
   "imgpath": "../../Roms/FBNEO/Imgs",
   "gamelist": "../../Roms/FBNEO/miyoogamelist.xml",
