--- a/Emu/FIFTYTWOHUNDRED/config.json
+++ b/Emu/FIFTYTWOHUNDRED/config.json
@@ -1,6 +1,6 @@
 {
   "label": "Atari 5200",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/5200.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/5200.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/5200.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/5200.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/FIFTYTWOHUNDRED",
-    "imgpath": "../../Roms/FIFTYTWOHUNDRED/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/FIFTYTWOHUNDRED",
-    "imgpath": "../../../../media/sdcard1/Roms/FIFTYTWOHUNDRED/Imgs"}],
+    {
+      "rompath": "../../Roms/FIFTYTWOHUNDRED",
+      "imgpath": "../../Roms/FIFTYTWOHUNDRED/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/FIFTYTWOHUNDRED",
+      "imgpath": "../../../../media/sdcard1/Roms/FIFTYTWOHUNDRED/Imgs"
+    }
+  ],
   "rompath": "../../Roms/FIFTYTWOHUNDRED",
   "imgpath": "../../Roms/FIFTYTWOHUNDRED/Imgs",
   "gamelist": "../../Roms/FIFTYTWOHUNDRED/miyoogamelist.xml",
