--- a/Emu/GB/config.json
+++ b/Emu/GB/config.json
@@ -1,17 +1,22 @@
 {
   "label": "GB",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/gb.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/gb.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gb.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/gb.png",
   "background": "",
-  "themecolor":"00FF00",
-  "effectsh":"effect.sh",
+  "themecolor": "00FF00",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/GB",
-    "imgpath": "../../Roms/GB/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/GB",
-    "imgpath": "../../../../media/sdcard1/Roms/GB/Imgs"}],
+    {
+      "rompath": "../../Roms/GB",
+      "imgpath": "../../Roms/GB/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/GB",
+      "imgpath": "../../../../media/sdcard1/Roms/GB/Imgs"
+    }
+  ],
   "rompath": "../../Roms/GB",
   "imgpath": "../../Roms/GB/Imgs",
   "gamelist": "../../Roms/GB/miyoogamelist.xml",
