--- a/Emu/GBC/config.json
+++ b/Emu/GBC/config.json
@@ -1,17 +1,22 @@
 {
   "label": "GBC",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/gbc.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/gbc.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gbc.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/gbc.png",
   "background": "",
-  "themecolor":"FFB800",
-  "effectsh":"effect.sh",
+  "themecolor": "FFB800",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/GBC",
-    "imgpath": "../../Roms/GBC/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/GBC",
-    "imgpath": "../../../../media/sdcard1/Roms/GBC/Imgs"}],
+    {
+      "rompath": "../../Roms/GBC",
+      "imgpath": "../../Roms/GBC/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/GBC",
+      "imgpath": "../../../../media/sdcard1/Roms/GBC/Imgs"
+    }
+  ],
   "rompath": "../../Roms/GBC",
   "imgpath": "../../Roms/GBC/Imgs",
   "gamelist": "../../Roms/GBC/miyoogamelist.xml",
