--- a/Emu/GG/config.json
+++ b/Emu/GG/config.json
@@ -1,17 +1,22 @@
 {
   "label": "Game Gear",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/gg.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/gg.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gg.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/gg.png",
   "background": "",
-  "themecolor":"FFFFFF",
-  "effectsh":"effect.sh",
+  "themecolor": "FFFFFF",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/GG",
-    "imgpath": "../../Roms/GG/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/GG",
-    "imgpath": "../../../../media/sdcard1/Roms/GG/Imgs"}],
+    {
+      "rompath": "../../Roms/GG",
+      "imgpath": "../../Roms/GG/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/GG",
+      "imgpath": "../../../../media/sdcard1/Roms/GG/Imgs"
+    }
+  ],
   "rompath": "../../Roms/GG",
   "imgpath": "../../Roms/GG/Imgs",
   "gamelist": "../../Roms/GG/miyoogamelist.xml",
