--- a/Emu/INTELLIVISION/config.json
+++ b/Emu/INTELLIVISION/config.json
@@ -1,6 +1,6 @@
 {
   "label": "Intellivis.",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/itv.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/itv.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/itv.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/itv.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/INTELLIVISION",
-    "imgpath": "../../Roms/INTELLIVISION/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/INTELLIVISION",
-    "imgpath": "../../../../media/sdcard1/Roms/INTELLIVISION/Imgs"}],
+    {
+      "rompath": "../../Roms/INTELLIVISION",
+      "imgpath": "../../Roms/INTELLIVISION/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/INTELLIVISION",
+      "imgpath": "../../../../media/sdcard1/Roms/INTELLIVISION/Imgs"
+    }
+  ],
   "rompath": "../../Roms/INTELLIVISION",
   "imgpath": "../../Roms/INTELLIVISION/Imgs",
   "gamelist": "../../Roms/INTELLIVISION/miyoogamelist.xml",
