--- a/Emu/LYNX/config.json
+++ b/Emu/LYNX/config.json
@@ -1,17 +1,22 @@
 {
   "label": "Atari Lynx",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/lynx.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/lynx.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/lynx.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/lynx.png",
   "background": "",
-  "themecolor":"88FF88",
-  "effectsh":"effect.sh",
+  "themecolor": "88FF88",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/LYNX",
-    "imgpath": "../../Roms/LYNX/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/LYNX",
-    "imgpath": "../../../../media/sdcard1/Roms/LYNX/Imgs"}],
+    {
+      "rompath": "../../Roms/LYNX",
+      "imgpath": "../../Roms/LYNX/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/LYNX",
+      "imgpath": "../../../../media/sdcard1/Roms/LYNX/Imgs"
+    }
+  ],
   "rompath": "../../Roms/LYNX",
   "imgpath": "../../Roms/LYNX/Imgs",
   "gamelist": "../../Roms/LYNX/miyoogamelist.xml",
