--- a/Emu/MAME2003PLUS/config.json
+++ b/Emu/MAME2003PLUS/config.json
@@ -1,17 +1,22 @@
 {
   "label": "MAME 03+",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/mame.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/mame.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/mame.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/mame.png",
   "background": "",
-  "themecolor":"00CCFF",
-  "effectsh":"effect.sh",
+  "themecolor": "00CCFF",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/MAME2003PLUS",
-    "imgpath": "../../Roms/MAME2003PLUS/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/MAME2003PLUS",
-    "imgpath": "../../../../media/sdcard1/Roms/MAME2003PLUS/Imgs"}],
+    {
+      "rompath": "../../Roms/MAME2003PLUS",
+      "imgpath": "../../Roms/MAME2003PLUS/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/MAME2003PLUS",
+      "imgpath": "../../../../media/sdcard1/Roms/MAME2003PLUS/Imgs"
+    }
+  ],
   "rompath": "../../Roms/MAME2003PLUS",
   "imgpath": "../../Roms/MAME2003PLUS/Imgs",
   "gamelist": "../../Roms/MAME2003PLUS/miyoogamelist.xml",
