--- a/Emu/MSU1/config.json
+++ b/Emu/MSU1/config.json
@@ -1,17 +1,22 @@
 {
   "label": "MSU1",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/msu1.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/msu1.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/msu1.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/msu1.png",
   "background": "",
-  "themecolor":"",
-  "effectsh":"",
+  "themecolor": "",
+  "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/MSU1",
-    "imgpath": "../../Roms/MSU1/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/MSU1",
-    "imgpath": "../../../../media/sdcard1/Roms/MSU1/Imgs"}],
+    {
+      "rompath": "../../Roms/MSU1",
+      "imgpath": "../../Roms/MSU1/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/MSU1",
+      "imgpath": "../../../../media/sdcard1/Roms/MSU1/Imgs"
+    }
+  ],
   "rompath": "../../Roms/MSU1",
   "imgpath": "../../Roms/MSU1/Imgs",
   "gamelist": "../../Roms/MSU1/miyoogamelist.xml",
