--- a/Emu/NDS/config.json
+++ b/Emu/NDS/config.json
@@ -1,17 +1,22 @@
 {
   "label": "NDS",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/nds.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/nds.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/nds.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/nds.png",
   "background": "",
-  "themecolor":"FF8800",
-  "effectsh":"effect.sh",
+  "themecolor": "FF8800",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/NDS",
-    "imgpath": "../../Roms/NDS/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/NDS",
-    "imgpath": "../../../../media/sdcard1/Roms/NDS/Imgs"}],
+    {
+      "rompath": "../../Roms/NDS",
+      "imgpath": "../../Roms/NDS/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/NDS",
+      "imgpath": "../../../../media/sdcard1/Roms/NDS/Imgs"
+    }
+  ],
   "rompath": "../../Roms/NDS",
   "imgpath": "../../Roms/NDS/Imgs",
   "gamelist": "../../Roms/NDS/miyoogamelist.xml",
