--- a/Emu/NEOGEO/config.json
+++ b/Emu/NEOGEO/config.json
@@ -1,17 +1,22 @@
 {
   "label": "NeoGeo",
-	"icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/neogeo.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/neogeo.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/neogeo.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/neogeo.png",
- 	"background": "",
-	"themecolor": "FFD200",
-  "effectsh":"effect.sh",
+  "background": "",
+  "themecolor": "FFD200",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/NEOGEO",
-    "imgpath": "../../Roms/NEOGEO/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/NEOGEO",
-    "imgpath": "../../../../media/sdcard1/Roms/NEOGEO/Imgs"}],
+    {
+      "rompath": "../../Roms/NEOGEO",
+      "imgpath": "../../Roms/NEOGEO/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/NEOGEO",
+      "imgpath": "../../../../media/sdcard1/Roms/NEOGEO/Imgs"
+    }
+  ],
   "rompath": "../../Roms/NEOGEO",
   "imgpath": "../../Roms/NEOGEO/Imgs",
   "gamelist": "../../Roms/NEOGEO/miyoogamelist.xml",
