--- a/Emu/PCE/config.json
+++ b/Emu/PCE/config.json
@@ -1,17 +1,22 @@
 {
   "label": "TG-16",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/pce.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/pce.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/pce.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/pce.png",
   "background": "",
-  "themecolor":"EA483F",
-  "effectsh":"effect.sh",
+  "themecolor": "EA483F",
+  "effectsh": "effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/PCE",
-    "imgpath": "../../Roms/PCE/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/PCE",
-    "imgpath": "../../../../media/sdcard1/Roms/PCE/Imgs"}],
+    {
+      "rompath": "../../Roms/PCE",
+      "imgpath": "../../Roms/PCE/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/PCE",
+      "imgpath": "../../../../media/sdcard1/Roms/PCE/Imgs"
+    }
+  ],
   "rompath": "../../Roms/PCE",
   "imgpath": "../../Roms/PCE/Imgs",
   "gamelist": "../../Roms/PCE/miyoogamelist.xml",
