--- a/Emu/PCECD/config.json
+++ b/Emu/PCECD/config.json
@@ -1,17 +1,22 @@
 {
   "label": "TG-CD",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/pcecd.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/pcecd.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/pcecd.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/pcecd.png",
   "background": "",
-  "themecolor":"",
-  "effectsh":"",
+  "themecolor": "",
+  "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/PCECD",
-    "imgpath": "../../Roms/PCECD/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/PCECD",
-    "imgpath": "../../../../media/sdcard1/Roms/PCECD/Imgs"}],
+    {
+      "rompath": "../../Roms/PCECD",
+      "imgpath": "../../Roms/PCECD/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/PCECD",
+      "imgpath": "../../../../media/sdcard1/Roms/PCECD/Imgs"
+    }
+  ],
   "rompath": "../../Roms/PCECD",
   "imgpath": "../../Roms/PCECD/Imgs",
   "gamelist": "../../Roms/PCECD/miyoogamelist.xml",
