--- a/Emu/SATELLAVIEW/config.json
+++ b/Emu/SATELLAVIEW/config.json
@@ -4,14 +4,19 @@
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/satella.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/satella.png",
   "background": "",
-  "themecolor":"",
-  "effectsh":"",
+  "themecolor": "",
+  "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/SATELLAVIEW",
-    "imgpath": "../../Roms/SATELLAVIEW/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/SATELLAVIEW",
-    "imgpath": "../../../../media/sdcard1/Roms/SATELLAVIEW/Imgs"}],
+    {
+      "rompath": "../../Roms/SATELLAVIEW",
+      "imgpath": "../../Roms/SATELLAVIEW/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/SATELLAVIEW",
+      "imgpath": "../../../../media/sdcard1/Roms/SATELLAVIEW/Imgs"
+    }
+  ],
   "rompath": "../../Roms/SATELLAVIEW",
   "imgpath": "../../Roms/SATELLAVIEW/Imgs",
   "gamelist": "../../Roms/SATELLAVIEW/miyoogamelist.xml",
