--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -1,25 +1,30 @@
 {
-"label": "Saturn",
-"icontop": "",
-"icon": "/mnt/SDCARD/Themes/SPRUCE/icons/saturn.png",
-"iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/saturn.png",
-"background": "",
-"themecolor": "E4007F",
-"effectsh": "effect.sh",
-"launch": "../.emu_setup/standard_launch.sh",
+  "label": "Saturn",
+  "icontop": "",
+  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/saturn.png",
+  "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/saturn.png",
+  "background": "",
+  "themecolor": "E4007F",
+  "effectsh": "effect.sh",
+  "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/SATURN",
-    "imgpath": "../../Roms/SATURN/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/SATURN",
-    "imgpath": "../../../../media/sdcard1/Roms/SATURN/Imgs"}],
-"rompath": "../../Roms/SATURN",
-"imgpath": "../../Roms/SATURN/Imgs",
-"gamelist": "../../Roms/SATURN/miyoogamelist.xml",
-"useswap": 1,
-"shortname": 0,
-"hidebios": 1,
-"extlist": "chd|zip|mds|ccd|iso|cue",
-"launchlist": [
+    {
+      "rompath": "../../Roms/SATURN",
+      "imgpath": "../../Roms/SATURN/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/SATURN",
+      "imgpath": "../../../../media/sdcard1/Roms/SATURN/Imgs"
+    }
+  ],
+  "rompath": "../../Roms/SATURN",
+  "imgpath": "../../Roms/SATURN/Imgs",
+  "gamelist": "../../Roms/SATURN/miyoogamelist.xml",
+  "useswap": 1,
+  "shortname": 0,
+  "hidebios": 1,
+  "extlist": "chd|zip|mds|ccd|iso|cue",
+  "launchlist": [
     {
       "name": "Jump to random Saturn game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
