--- a/Emu/SEGACD/config.json
+++ b/Emu/SEGACD/config.json
@@ -1,17 +1,22 @@
 {
   "label": "Sega CD",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/segacd.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/segacd.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/segacd.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/segacd.png",
   "background": "",
-  "themecolor":"",
-  "effectsh":"",
+  "themecolor": "",
+  "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/SEGACD",
-    "imgpath": "../../Roms/SEGACD/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/SEGACD",
-    "imgpath": "../../../../media/sdcard1/Roms/SEGACD/Imgs"}],
+    {
+      "rompath": "../../Roms/SEGACD",
+      "imgpath": "../../Roms/SEGACD/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/SEGACD",
+      "imgpath": "../../../../media/sdcard1/Roms/SEGACD/Imgs"
+    }
+  ],
   "rompath": "../../Roms/SEGACD",
   "imgpath": "../../Roms/SEGACD/Imgs",
   "gamelist": "../../Roms/SEGACD/miyoogamelist.xml",
