--- a/Emu/SGFX/config.json
+++ b/Emu/SGFX/config.json
@@ -1,6 +1,6 @@
 {
   "label": "SuperGfx",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/sgfx.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/sgfx.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/sgfx.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/sgfx.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/SGFX",
-    "imgpath": "../../Roms/SGFX/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/SGFX",
-    "imgpath": "../../../../media/sdcard1/Roms/SGFX/Imgs"}],
+    {
+      "rompath": "../../Roms/SGFX",
+      "imgpath": "../../Roms/SGFX/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/SGFX",
+      "imgpath": "../../../../media/sdcard1/Roms/SGFX/Imgs"
+    }
+  ],
   "rompath": "../../Roms/SGFX",
   "imgpath": "../../Roms/SGFX/Imgs",
   "gamelist": "../../Roms/SGFX/miyoogamelist.xml",
