--- a/Emu/SUFAMI/config.json
+++ b/Emu/SUFAMI/config.json
@@ -1,6 +1,6 @@
 {
   "label": "Sufami",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/sufami.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/sufami.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/sufami.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/sufami.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/SUFAMI",
-    "imgpath": "../../Roms/SUFAMI/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/SUFAMI",
-    "imgpath": "../../../../media/sdcard1/Roms/SUFAMI/Imgs"}],
+    {
+      "rompath": "../../Roms/SUFAMI",
+      "imgpath": "../../Roms/SUFAMI/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/SUFAMI",
+      "imgpath": "../../../../media/sdcard1/Roms/SUFAMI/Imgs"
+    }
+  ],
   "rompath": "../../Roms/SUFAMI",
   "imgpath": "../../Roms/SUFAMI/Imgs",
   "gamelist": "../../Roms/SUFAMI/miyoogamelist.xml",
