--- a/Emu/THIRTYTWOX/config.json
+++ b/Emu/THIRTYTWOX/config.json
@@ -1,6 +1,6 @@
 {
   "label": "Sega 32X",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/32x.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/32x.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/32X.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/32X.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/THIRTYTWOX",
-    "imgpath": "../../Roms/THIRTYTWOX/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/THIRTYTWOX",
-    "imgpath": "../../../../media/sdcard1/Roms/THIRTYTWOX/Imgs"}],
+    {
+      "rompath": "../../Roms/THIRTYTWOX",
+      "imgpath": "../../Roms/THIRTYTWOX/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/THIRTYTWOX",
+      "imgpath": "../../../../media/sdcard1/Roms/THIRTYTWOX/Imgs"
+    }
+  ],
   "rompath": "../../Roms/THIRTYTWOX",
   "imgpath": "../../Roms/THIRTYTWOX/Imgs",
   "gamelist": "../../Roms/THIRTYTWOX/miyoogamelist.xml",
