--- a/Emu/X68000/config.json
+++ b/Emu/X68000/config.json
@@ -1,6 +1,6 @@
 {
   "label": "X68000",
-  "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/x68000.png",
+  "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/x68000.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/x68000.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/x68000.png",
   "background": "",
@@ -8,10 +8,15 @@
   "effectsh": "",
   "launch": "../.emu_setup/standard_launch.sh",
   "rompathlist": [
-    {"rompath": "../../Roms/X68000",
-    "imgpath": "../../Roms/X68000/Imgs"},
-    {"rompath": "../../../../media/sdcard1/Roms/X68000",
-    "imgpath": "../../../../media/sdcard1/Roms/X68000/Imgs"}],
+    {
+      "rompath": "../../Roms/X68000",
+      "imgpath": "../../Roms/X68000/Imgs"
+    },
+    {
+      "rompath": "../../../../media/sdcard1/Roms/X68000",
+      "imgpath": "../../../../media/sdcard1/Roms/X68000/Imgs"
+    }
+  ],
   "rompath": "../../Roms/X68000",
   "imgpath": "../../Roms/X68000/Imgs",
   "gamelist": "../../Roms/X68000/miyoogamelist.xml",
